--- a/src/content/blog/0000000.md
+++ b/src/content/blog/0000000.md
@@ -11,3 +11,7 @@ heroImage: "/placeholder-hero.jpg"
 実際のところ、やっぱり投稿に際して厳密なワークフローを組んで、よりシステマチックにするべきでした。
 そうでなければ、いくら熱量があったとしても苦しくなっていたでしょう。
 人間、適切な作業手順がなければ作業内容に実りを出すことは難しいものです。
+
+というわけで、今回からはある程度システマチックに環境を整えたので、多分長続きする（ハズ）です。
+そうであることを祈っています。
+皆様、どうぞよろしくお願いします～。
