feat: fix descriptsion

--- a/src/content/blog/0000000.md
+++ b/src/content/blog/0000000.md
@@ -1,6 +1,6 @@
 ---
 title: "活動報告書 No.001"
-description: "Lorem ipsum dolor sit amet"
+description: "2023/04/10 時点での活動報告"
 pubDate: "4 10 2023"
 heroImage: "/placeholder-hero.jpg"
 ---
