:sparkles: feat: 記事追加

--- a/src/content/blog/guti-2023-09-23.md
+++ b/src/content/blog/guti-2023-09-23.md
@@ -3,7 +3,7 @@ author: Yuni Hutsuka
 pubDatetime: 2023-09-23T18:00:00Z
 title: 愚痴 - その1
 postSlug: guti
-featured: true
+featured: false
 draft: false
 tags:
   - blog-ブログ
