:bug: fix: 命名規則等を修正した

--- a/src/content/blog/2023-09-07T18:00:00-domain.md
+++ b/src/content/blog/2023-09-07T18:00:00-domain.md
@@ -2,7 +2,7 @@
 author: Yuni Hutsuka
 pubDatetime: 2023-09-07T18:00:00.400Z
 title: ドメインを弄るのに苦労した話
-postSlug: domain_turai
+postSlug: domain-turai
 featured: false
 draft: false
 tags:
