:construction: wip: 修正

--- a/src/content/blog/0000-00-00T00:00:00-empty.md
+++ b/src/content/blog/0000-00-00T00:00:00-empty.md
@@ -1,6 +1,6 @@
 ---
 author: Yuni Hutsuka
-pubDatetime: yyyy-MM-ddTHH:mm:00.400Z
+pubDatetime: 0000-01-1T00:00:00.400Z
 title: タイトル
 postSlug: empty
 featured: false
