--- a/src/content/blog/2023-09-14T18:50:00-bon-voyage.md
+++ b/src/content/blog/2023-09-14T18:50:00-bon-voyage.md
@@ -1,7 +1,7 @@
 ---
 author: Yuni Hutsuka
 pubDatetime: 2023-09-14T18:50:00.400Z
-title: Bonコマンドを作った話
+title: Bonコマンド
 postSlug: bon-voyage
 featured: false
 draft: false
