:sparkles: feat: 抱負。

--- a/src/content/blog/0000-00-00T00:00:00-empty.md
+++ b/src/content/blog/0000-00-00T00:00:00-empty.md
@@ -2,7 +2,7 @@
 author: Yuni Hutsuka
 pubDatetime: 0000-01-1T00:00:00.400Z
 title: タイトル
-postSlug: empty
+slug: empty
 featured: false
 draft: true
 tags:
