--- a/src/content/blog/2023-07-03T00:00:00-about-me.md
+++ b/src/content/blog/2023-07-03T00:00:00-about-me.md
@@ -2,7 +2,7 @@
 author: Yuni Hutsuka
 pubDatetime: 2023-07-03T00:00:00.400Z
 title: 自己紹介 - 二日ゆに
-postSlug: about-me
+slug: about-yuni-hutsuka
 featured: true
 draft: false
 tags:
@@ -25,7 +25,15 @@ description: 二日ゆに個人に焦点を当てた自己紹介ページ。
 | 性別       | 男                 |
 | 生年月日   | 2000 年 5 月 13 日 |
 
-## 趣味人として
+## 好きな作品
+
+- 『新世紀エヴァンゲリオン』シリーズ
+- 『ふしぎの海のナディア』
+- 『宇宙戦艦ヤマト』
+- 『スペース☆ダンディ』
+- [その他](/favorite)
+
+## ざっくり経歴
 
 社会の片隅でうずくまって何者かになりたがっている人間。
 静岡県下田市須原に生まれ、神奈川県川崎市に育つ。
@@ -38,9 +46,9 @@ description: 二日ゆに個人に焦点を当てた自己紹介ページ。
 
 現在は大学院での活動と並行して、オリジナル小説、エヴァンゲリオン二次創作小説の執筆を続けている。
 
-## 情報科学徒として
+## 各種リンク
 
-2019 年から某大学情報科学科において情報科学を学び始めた。
-
-決して真面目な学生ではなく、自らが楽しいと感じた勉学とは呼べないコンピュータの諸要素に触れ続けている。
-Rust によるコマンドラインツールの作成や、LaTeX のスタイルファイルの作成、unixporn などに親しんでいる。
+- [X(旧Twitter)](https://twitter.com/yuni_hutsuka)
+- [Bluesky](https://bsky.app/profile/yuni-hutsuka.amaterath.com)
+- [Pixiv](https://www.pixiv.net/users/20509498)
+- [カクヨム](https://kakuyomu.jp/users/yuni_hutsuka)
