--- a/src/content/blog/2023-09-14T18:50:00-bon-voyage.md
+++ b/src/content/blog/2023-09-14T18:50:00-bon-voyage.md
@@ -2,7 +2,7 @@
 author: Yuni Hutsuka
 pubDatetime: 2023-09-14T18:50:00.400Z
 title: Bonコマンド
-postSlug: bon-voyage
+slug: bon-voyage
 featured: false
 draft: false
 tags:
