--- a/src/content/blog/2023-08-21T00:00:00-c103-declaration.md
+++ b/src/content/blog/2023-08-21T00:00:00-c103-declaration.md
@@ -2,7 +2,7 @@
 author: Yuni Hutsuka
 pubDatetime: 2023-08-21T00:00:00.400Z
 title: 冬コミに申し込みました。
-postSlug: c103-declaration
+slug: c103-declaration
 featured: false
 draft: false
 tags:
