--- a/src/content/blog/2023-09-23T18:00:00-guti-2023-09-23.md
+++ b/src/content/blog/2023-09-23T18:00:00-guti-2023-09-23.md
@@ -2,7 +2,7 @@
 author: Yuni Hutsuka
 pubDatetime: 2023-09-23T18:00:00.400Z
 title: 愚痴 - その1
-postSlug: guti
+slug: guti
 featured: false
 draft: false
 tags:
