--- a/src/content/blog/2023-09-25T18:00:00-guti-2023-09-25.md
+++ b/src/content/blog/2023-09-25T18:00:00-guti-2023-09-25.md
@@ -2,7 +2,7 @@
 author: Yuni Hutsuka
 pubDatetime: 2023-09-25T18:00:00.400Z
 title: 雑記 - その2
-postSlug: zakki-02
+slug: zakki-02
 featured: false
 draft: false
 tags:
