--- a/src/content/blog/2023-10-02T00:00:00-zakki-2023-10-02.md
+++ b/src/content/blog/2023-10-02T00:00:00-zakki-2023-10-02.md
@@ -2,7 +2,7 @@
 author: Yuni Hutsuka
 pubDatetime: 2023-10-02T00:00:00.400Z
 title: 雑記 - その3
-postSlug: zakki-03
+slug: zakki-03
 featured: false
 draft: false
 tags:
