--- a/src/content/blog/2023-10-18T00:00:00-zakki-2023-10-18.md
+++ b/src/content/blog/2023-10-18T00:00:00-zakki-2023-10-18.md
@@ -2,7 +2,7 @@
 author: Yuni Hutsuka
 pubDatetime: 2023-10-18T00:00:00.400Z
 title: 雑記 - その4
-postSlug: zakki-04
+slug: zakki-04
 featured: false
 draft: false
 tags:
