--- a/src/content/blog/2023-12-31T16:00:00-c103-report.md
+++ b/src/content/blog/2023-12-31T16:00:00-c103-report.md
@@ -2,7 +2,7 @@
 author: Yuni Hutsuka
 pubDatetime: 2023-12-31T16:00:00.400Z
 title: C103 コミケレポと軽い今年の振り返り
-postSlug: c103-report
+slug: c103-report
 featured: true
 draft: false
 tags:
